--- a/tema_undangan/tema_1/style.css
+++ b/tema_undangan/tema_1/style.css
@@ -303,3 +303,15 @@ iframe{
 .cardAkad{
     background-image: url('./img/black_image.png');
 }
+
+    /* content fixed */
+
+    .navbar {
+        overflow: hidden;
+        background-color: transparent;
+        position: fixed;
+        right: 0;
+        bottom: 0;
+        z-index: 1;
+      }
+      
